<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".LoginActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/red"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Social"
                android:textStyle="normal"
                android:textSize="30sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X"
                android:textStyle="normal"
                android:textSize="40sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@drawable/login_and_reg_bt_bg"
        android:layout_height="50dp"/>
    <LinearLayout
        android:id="@+id/login_btns_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn_upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_reg_btn_back"
            android:text="LOGIN"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/sign_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="SIGN UP"
            android:textColor="@color/black"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/login_btns_ll"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_marginVertical="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="30dp"
        android:elevation="20dp"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:orientation="vertical"
            android:paddingHorizontal="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/signin_into_your"
                android:textAlignment="viewStart"
                android:textColor="@color/red"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/account"
                android:textAlignment="viewStart"
                android:textColor="@color/red"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_tv"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:maxLength="35"
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:drawablePadding="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:drawableEnd="@drawable/ic_baseline_lock_24"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:drawablePadding="2dp"/>
            <TextView
                android:id="@+id/forgot_pass_tv"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textColor="@color/red"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="Login with"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/google_login_btn"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/google_icon"
                    android:background="@drawable/ggogle_bg"/>
                <ImageButton
                    android:id="@+id/facebook_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/facebook_icon"
                    android:backgroundTint="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/don_t_have_an_account"/>
                <TextView
                    android:id="@+id/register_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/register_now"
                    android:layout_marginStart="5dp"
                    android:textSize="16sp"
                    android:textColor="@color/red"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/textview_bg"
        android:text="LOGIN"
        android:textAlignment="center"
        android:paddingVertical="20dp"
        android:textColor="@color/white"/>




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>