<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".RegisterActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/red"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Social"
                android:textStyle="normal"
                android:textSize="30sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X"
                android:textStyle="normal"
                android:textSize="40sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@drawable/login_and_reg_bt_bg"
        android:layout_height="50dp"/>
    <LinearLayout
        android:id="@+id/login_btns_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/login_tv_upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="LOGIN"
            android:textColor="@color/black"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lsign_up_btn_upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/login_reg_btn_back"
            android:text="SIGN UP"
            android:textColor="@color/white"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/login_btns_ll"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_marginVertical="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="30dp"
        android:elevation="20dp"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:orientation="vertical"
            android:paddingHorizontal="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:text="Create an"
                android:textAlignment="viewStart"
                android:textColor="@color/red"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/account"
                android:textAlignment="viewStart"
                android:textColor="@color/red"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                android:maxLength="35"
                android:drawableEnd="@drawable/ic_baseline_person_24"
                android:drawablePadding="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:drawablePadding="2dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contact No"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/india"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="+91"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24" />
                <EditText
                    android:id="@+id/phone_no_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_gravity="center_vertical"
                    android:hint="9370687891"
                    android:textColor="@color/black"
                    android:inputType="phone"
                    android:textSize="24sp"
                    android:maxLength="10"
                    android:drawableEnd="@drawable/ic_baseline_call_24"
                    android:drawablePadding="2dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:maxLength="35"
                android:drawableEnd="@drawable/ic_baseline_lock_24"
                android:drawablePadding="2dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_agreed_with"
                    android:drawableStart="@drawable/checkbox"
                    android:button="@null"/>
                <TextView
                    android:id="@+id/term_tv"
                    android:text="@string/term_and_condition"
                    android:textColor="@color/red"
                    android:fontFamily="@font/ubuntu_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:text="Already have an account ?"/>
                <TextView
                    android:id="@+id/sign_in_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Sign In!"
                    android:layout_marginStart="5dp"
                    android:textSize="16sp"
                    android:textColor="@color/red"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/textview_bg"
        android:text="REGISTER"
        android:textAlignment="center"
        android:paddingVertical="20dp"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>